# system-programming-lab-4

./: CMakeLists.txt  Makefile  calculator.h  main.c
